Move Roll to Bowl to Table

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= game.current_frame %></td>
         <td><%= game.frame_stroke %></td>
         <td><%= game.total_score %></td>
-        <%= link_to 'Roll to Bowl', bowl_game_path(game), class: "btn btn-xs btn-link", :method => :put %>
+        <td><%= link_to 'Roll to Bowl', bowl_game_path(game), class: "btn btn-xs btn-link", :method => :put %></td>
         <td><%= link_to 'Show', game %></td>
         <td><%= link_to 'Edit', edit_game_path(game) %></td>
         <td><%= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' } %></td>
