--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,5 +4,5 @@
 	
 	<p>Bowlerama is a simple bowling game simulator.</p>
 
-	<%= link_to "Start Game", games_path, class: "btn btn-primary btn-lg" %>
+	<%= link_to "Start Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
 </div>
