--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,10 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
+	<center>
 	<h1>Welcome to Bowlerama</h1>
 	
 	<p>Bowlerama is a simple bowling game simulator.</p>
 
 	<%= link_to "Start Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
+</center>
 </div>
