--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,4 @@
+</div>
 	<!-- Javascripts
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
