Enable Games Link in Navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="">Games</a></li>
+            <li><%= link_to 'Games', games_path%></li>
         </div><!--/.nav-collapse -->
       </div>
     </div>
