Remove Redundant Home Link & Style New Game Button

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <%= link_to 'Home', root_path, class: "btn btn-xs btn-link"%> | 
-  <%= link_to 'New Game', games_path, :method => :post %>
+  <%= link_to 'New Game', games_path, :method => :post, class: "btn btn-default" %>
 </p>
 
 <h1>List of Games</h1>
