Style Score Card Table

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -28,9 +28,9 @@
   <%= @game.total_score %>
 </p>
 
-<h1>Game Details</h1>
+<h1>Score Card</h1>
 
-<table>
+<table class="table table-striped table-hover ">
   <thead>
     <tr>
       <th>Frame number</th>
