Remove Back Link

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-	<%= link_to 'Roll to Bowl', bowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put %> | 
-  <%= link_to 'Back to List of Games', games_path %>
+	<%= link_to 'Bowl', bowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-success" %>
 </p>
 
 <p>
