Add Reset Game Feature

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,6 +2,7 @@
 
 <p>
 	<%= link_to 'Bowl', bowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-success" %>
+  <%= link_to 'Reset', reset_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-danger", data: { confirm: 'Are you sure?' } %>
 </p>
 
 <p>
