--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,7 +4,7 @@
   <%= link_to 'New Game', games_path, :method => :post, class: "btn btn-default" %>
 </p>
 
-<h1>List of Games</h1>
+<h1>Games</h1>
 
 <table class="table table-striped table-hover ">
   <thead>
