--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,10 @@
 <p>
-	<%= link_to 'Bowl', bowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-success" %>
+	<%= if !@game.isGameOver
+      link_to 'Bowl', bowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-success"
+    else
+      link_to 'See Results', bowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-success", data: { confirm: 'Your Final Score: ' + @game.total_score.to_s } 
+    end
+  %>
   <%= link_to 'Reset', reset_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-danger", data: { confirm: 'Are you sure?' } %>
 </p>
 
