--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -49,7 +49,8 @@
   </thead>
 
   <tbody>
-    <% @game.frames.each do |frame| %>
+    <% @game.frames.sort_by {|frame| frame.frame_number}
+      @game.frames.each do |frame| %>
       <tr>
         <td><%= frame.frame_number %></td>
         <td><%= frame.first_stroke %></td>
