--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -49,8 +49,7 @@
   </thead>
 
   <tbody>
-    <% @game.frames.includes(:frame_number).order("frames.frame_number DESC")
-      @game.frames.each do |frame| %>
+    <% @game.frames.each do |frame| %>
       <tr>
         <td><%= frame.frame_number %></td>
         <td><%= frame.first_stroke %></td>
