Adjust Navbar and Links to Hide Games List

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,16 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><%= link_to 'Games', games_path%></li>
+            <li><%= if !@game.nil?
+              if !@game.isGameOver 
+              link_to 'Bowl', bowl_game_path(@game), :method => :put
+              else 
+                link_to 'Reset', reset_game_path(@game), :method => :put, data: { confirm: 'Are you sure?' }
+              end end%></li>
+            <li><%= if !@game.nil?
+              if !@game.isGameOver
+              link_to 'Reset', reset_game_path(@game), :method => :put, data: { confirm: 'Are you sure?' }
+              end end%>
         </div><!--/.nav-collapse -->
       </div>
     </div>
