Hide Navbar Options

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
           </button>
           <a class="navbar-brand" href="/">Bowlerama</a>
         </div>
-        
+        <!--
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
@@ -23,6 +23,9 @@
               if !@game.isGameOver
               link_to 'Reset', reset_game_path(@game), :method => :put, data: { confirm: 'Are you sure?' }
               end end%>
-        </div><!--/.nav-collapse -->
+        </div>
+-->
+        <!--/.nav-collapse -->
+      
       </div>
     </div>
