--- a/app/views/games/results.html.erb
+++ b/app/views/games/results.html.erb
@@ -1,4 +1,3 @@
-<!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<center>
 	<h1>Thanks for playing Bowlerama</h1>
@@ -6,5 +5,38 @@
 	<p><%= "Nice game! You scored a " + @game.total_score.to_s %></p>
 
 	<%= link_to "Start Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
-</center>
+	</center>
+</div>
+
+<div>
+	<h1>Score Card</h1>
+
+	<table class="table table-striped table-hover ">
+	  <thead>
+	    <tr>
+	      <th>Frame number</th>
+	      <th>First stroke</th>
+	      <th>Second stroke</th>
+	      <th>Extra stroke</th>
+	      <th>Total</th>
+	      <th colspan="3"></th>
+	    </tr>
+	  </thead>
+
+	  <tbody>
+	    <% frame_total = 0
+	      @game.frames.each do |frame| 
+	        frame_total += frame.frame_score%>
+	      <tr>
+	        <td><%= frame.frame_number %></td>
+	        <td><%= frame.first_stroke %></td>
+	        <td><%= frame.second_stroke %></td>
+	        <td><%= frame.extra_stroke %></td>
+	        <td><%= if !frame.first_stroke.nil?
+	          frame_total
+	        end %></td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
 </div>
