--- a/app/views/frames/index.html.erb
+++ b/app/views/frames/index.html.erb
@@ -1,13 +1,18 @@
-<h1>Listing frames</h1>
+<p>
+  <%= link_to 'New Frame', new_frame_path, class: "btn btn-xs btn-link", :method => :put, class: "btn btn-primary" %>
+</p>
 
-<table>
+<h1>Frames</h1>
+
+<table class="table table-striped table-hover ">
   <thead>
     <tr>
+      <th>Game ID</th>
+      <th>Frame number</th>
       <th>First stroke</th>
       <th>Second stroke</th>
       <th>Extra stroke</th>
       <th>Frame score</th>
-      <th>Frame number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,11 +20,12 @@
   <tbody>
     <% @frames.each do |frame| %>
       <tr>
+        <td><%= frame.game_id %></td>
+        <td><%= frame.frame_number %></td>
         <td><%= frame.first_stroke %></td>
         <td><%= frame.second_stroke %></td>
         <td><%= frame.extra_stroke %></td>
         <td><%= frame.frame_score %></td>
-        <td><%= frame.frame_number %></td>
         <td><%= link_to 'Show', frame %></td>
         <td><%= link_to 'Edit', edit_frame_path(frame) %></td>
         <td><%= link_to 'Destroy', frame, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +36,5 @@
 
 <br>
 
-<%= link_to 'New Frame', new_frame_path %>
+
+<br>
