--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,15 +32,21 @@
   <tbody>
     <% frame_total = 0
       @game.frames.each do |frame| 
-        frame_total += frame.frame_score%>
+        if frame.frame_score.nil?
+          frame_total = 0
+        else
+          frame_total += frame.frame_score
+        end %>
       <tr>
         <td><%= frame.frame_number %></td>
         <td><%= frame.first_stroke %></td>
         <td><%= frame.second_stroke %></td>
         <td><%= frame.extra_stroke %></td>
-        <td><%= if !frame.first_stroke.nil?
+        <td><%= if frame_total.nil?
+         0
+         else
           frame_total
-        end %></td>
+         end %></td>
       </tr>
     <% end %>
   </tbody>
