--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,21 +32,13 @@
   <tbody>
     <% frame_total = 0
       @game.frames.each do |frame| 
-        if frame.frame_score.nil?
-          frame_total = 0
-        else
-          frame_total += frame.frame_score
-        end %>
+        frame_total = @game.subZeroForNil(frame.frame_score) %>
       <tr>
         <td><%= frame.frame_number %></td>
         <td><%= frame.first_stroke %></td>
         <td><%= frame.second_stroke %></td>
         <td><%= frame.extra_stroke %></td>
-        <td><%= if frame_total.nil?
-         0
-         else
-          frame_total
-         end %></td>
+        <td><%= frame.frame_score %></td>
       </tr>
     <% end %>
   </tbody>
