--- a/app/views/games/botchoice.html.erb
+++ b/app/views/games/botchoice.html.erb
@@ -4,8 +4,9 @@
 	
 	<p>Choose wisely...</p>
 
-	<%= link_to 'PerfectBot', botbowl_game_path(@game,:game_type => "perfect"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
-	<%= link_to 'PickupBot', botbowl_game_path(@game,:game_type => "pickup"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
-	<%= link_to 'RandomBot', botbowl_game_path(@game), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
+	<%= link_to 'PerfectBot', botbowl_game_path(@game, :game_type => "perfect"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
+	<%= link_to 'MarkerBot', botbowl_game_path(@game, :game_type => "marker"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
+	<%= link_to 'PickupBot', botbowl_game_path(@game, :game_type => "pickup"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
+	<%= link_to 'RandomBot', botbowl_game_path(@game, :game_type => "random"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
 	</center>
 </div>
