--- a/app/views/games/botchoice.html.erb
+++ b/app/views/games/botchoice.html.erb
@@ -8,6 +8,7 @@
 	<%= link_to 'MarkerBot', botbowl_game_path(@game, :game_type => "marker"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
 	<%= link_to 'PickupBot', botbowl_game_path(@game, :game_type => "pickup"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
 	<%= link_to 'ChokerBot', botbowl_game_path(@game, :game_type => "choker"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
+	<%= link_to 'GutterBot', botbowl_game_path(@game, :game_type => "gutter"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
 	<%= link_to 'RandomBot', botbowl_game_path(@game, :game_type => "random"), class: "btn btn-xs btn-link", :method => :put, class: "btn btn-default"%>
 	</center>
 </div>
