--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,6 @@
 	
 	<p>Bowlerama is a simple bowling game simulator.</p>
 
-	<%= link_to "Start Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
+	<%= link_to "Start New Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
 </center>
 </div>
