--- a/app/views/games/results.html.erb
+++ b/app/views/games/results.html.erb
@@ -11,7 +11,7 @@
 	
 	<p><%= "Nice game! You scored a " + @game.total_score.to_s %></p>
 
-	<%= link_to "Start Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
+	<%= link_to "Start New Game", games_path, :method => :post, class: "btn btn-primary btn-lg" %>
 	</center>
 </div>
 
